Fixed invisible remove file button (issue #360). Added styled 403 page with logout link (issues #367 and #408) and styled 404 page for free.

--- a/trunk/manta/war/WEB-INF/resources/apps/common/theme/wwarn.css
+++ b/trunk/manta/war/WEB-INF/resources/apps/common/theme/wwarn.css
@@ -851,7 +851,7 @@ button.addRemove {
 	padding:0;
 }
 .yui-skin-sam .yui-dt-liner button {
-	background:url("/manta/apps/fr/style/remove.gif") no-repeat scroll 0 0 transparent;
+	background:url("remove.gif") no-repeat scroll 0 0 transparent;
 	border:medium none;
 	display:inline;
 	float:right;
